# Pascal0-Compiler

./: README.md  pascal0Compiler.cabal
src/: AST.hs  Lexer.x  Main.hs  PMips.hs  Parser.y  README.md  Typecheck.hs  Var.hs
