name:                pascal0Compiler
version:             0.1.0.0
synopsis:            Pascal Compiler
description:         Pascal Compiler
author:              Luis Sousa(_202004689) Joao Reis(_202005824)
maintainer:          up202004689@up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable pascal0Compiler
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tools:         alex, happy
  build-depends:       base, array
  hs-source-dirs:      src
  default-language:    Haskell2010
